--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jason-react-portfolio",
+  "name": "Jasons-React-Portfolio",
   "version": "0.1.0",
-  "homepage": "https://paynejc.github.io/react-gh-pages",
+  "homepage": "https://paynejc.github.io/Jasons-React-Portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
